@@ -2,12 +2,8 @@ package it.unibo.inner;
 
 import it.unibo.inner.api.IterableWithPolicy;
 import it.unibo.inner.impl.IterableWithPolicyImpl;
-import it.unibo.inner.test.api.Product;
-import it.unibo.inner.test.impl.ProductImpl;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.function.Predicate;
+import java.util.List;
 
 import static it.unibo.inner.test.Assertions.assertContentEqualsInOrder;
 
@@ -15,24 +11,24 @@ public class TestIterablePlain {
 
     private TestIterablePlain() {}
 
-    private static <T> IterableWithPolicy<T> getIterableWithPolicy(T[] elements) {
+    private static <T> IterableWithPolicy<T> getIterableWithPolicy(final T[] elements) {
         return new IterableWithPolicyImpl<>(elements);
     }
 
-    public static void main(String[] args) {
-        Integer[] test1 = { 1, 2, 3, 4, 5, 6, 7, 8, 9 };
+    public static void main(final String[] args) {
+        String[] test1 = { "pippo", "pluto", "paperino" };
 
-        IterableWithPolicy<Integer> evenIterable = getIterableWithPolicy(test1);
-        assertContentEqualsInOrder(evenIterable, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
+        IterableWithPolicy<String> evenIterable = getIterableWithPolicy(test1);
+        assertContentEqualsInOrder(evenIterable, List.of("pippo", "pluto", "paperino"));
 
-        Integer[] test2 = {};
+        String[] test2 = {};
 
-        IterableWithPolicy<Integer> emptyIterable = getIterableWithPolicy(test2);
-        assertContentEqualsInOrder(emptyIterable, new ArrayList<>());
+        IterableWithPolicy<String> emptyIterable = getIterableWithPolicy(test2);
+        assertContentEqualsInOrder(emptyIterable, List.of());
 
-        Integer[] test3 = { 100 };
+        String[] test3 = { "foo" };
 
-        IterableWithPolicy<Integer> oneIterable = getIterableWithPolicy(test3);
-        assertContentEqualsInOrder(oneIterable, Arrays.asList(100));
+        IterableWithPolicy<String> oneIterable = getIterableWithPolicy(test3);
+        assertContentEqualsInOrder(oneIterable, List.of("foo"));
     }
 }
